# IDS-from-Scratch

./: CMakeLists.txt  README.md
include/: Packet_Parser.hpp  Rule_Matcher.hpp  Rule_Parser.hpp  Rules.hpp  Worker.hpp
src/: main.cpp  main2.cpp  packet_parser.cpp  rule_matcher.cpp  rule_parser.cpp  worker.cpp
